# internal/controller/controller.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"context"
 	"encoding/json"
 	"errors"
 	"io"
@@ -9,6 +10,7 @@ import (
 	"pet-market/internal/logger"
 	"pet-market/internal/security"
 	"pet-market/internal/service"
+	"pet-market/internal/utils"
 
 	"github.com/jackc/pgx/v5"
 )
@@ -23,73 +25,201 @@ type Controller struct {
 	log            logger.Logger
 }
 
-func NewController(auth security.Authorization, usrService service.UserService) *Controller {
+func NewController(
+	auth security.Authorization,
+	usrService service.UserService,
+	orderService service.OrderService,
+	balanceService service.BalanceService,
+	log *logger.Logger,
+) *Controller {
 	return &Controller{
-		Authorization: auth,
-		UserService:   usrService,
+		Authorization:  auth,
+		UserService:    usrService,
+		OrderService:   orderService,
+		BalanceService: balanceService,
+		log:            *log,
 	}
-}
-func (s *Controller) GetOrdersNumber(w http.ResponseWriter, r *http.Request, number string) {
-	w.WriteHeader(http.StatusNotImplemented)
 }
 
 func (s *Controller) GetBalance(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
+	if !s.Authorization.Authorize(w, r) {
+		s.writeResponse(w, r, http.StatusUnauthorized, nil)
+		return
+	}
+	token := r.Header.Get("Authorization")
+	token, tokenErr := security.GetToken(token)
+	if tokenErr != nil {
+		s.writeResponse(w, r, http.StatusInternalServerError, tokenErr)
+	}
+	ctx := context.Background()
+	userID := security.GetUserID(token)
+	balance, err := s.BalanceService.GetBalance(ctx, userID)
+	if err != nil {
+		s.writeResponse(w, r, http.StatusInternalServerError, err)
+	} else {
+		s.writeResponse(w, r, http.StatusOK, balance)
+	}
 }
 
 func (s *Controller) WithdrawBalance(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
+	if !s.Authorization.Authorize(w, r) {
+		s.writeResponse(w, r, http.StatusUnauthorized, nil)
+		return
+	}
+	token := r.Header.Get("Authorization")
+	token, tokenErr := security.GetToken(token)
+	if tokenErr != nil {
+		s.writeResponse(w, r, http.StatusInternalServerError, tokenErr)
+	}
+	ctx := context.Background()
+	b, errBody := io.ReadAll(r.Body)
+	defer r.Body.Close()
+	if errBody != nil {
+		s.writeResponse(w, r, http.StatusInternalServerError, errBody)
+	}
+	var withdraw api.RequestWithdraw
+	if err := json.Unmarshal(b, &withdraw); err != nil {
+		s.writeResponse(w, r, http.StatusBadRequest, err)
+	}
+	userID := security.GetUserID(token)
+	err := s.BalanceService.AddWithdraw(ctx, userID, withdraw)
+	if err == nil {
+		s.writeResponse(w, r, http.StatusOK, err)
+	} else if errors.Is(err, utils.ErrInvalidOrderNum) {
+		s.writeResponse(w, r, http.StatusUnprocessableEntity, err)
+	} else if errors.Is(err, utils.ErrInsufficientFunds) {
+		s.writeResponse(w, r, http.StatusPaymentRequired, err)
+	} else {
+		s.writeResponse(w, r, http.StatusInternalServerError, err)
+	}
+
 }
 
 func (s *Controller) AuthorizeUser(w http.ResponseWriter, r *http.Request) {
+	ctx := context.Background()
 	var user api.User
 	body, _ := io.ReadAll(r.Body)
+	defer r.Body.Close()
 	if err := json.Unmarshal(body, &user); err != nil {
 		s.writeResponse(w, r, http.StatusBadRequest, err)
 	}
-	usr, queryErr := s.UserService.GetUserByName(user.Login)
+	usr, queryErr := s.UserService.GetUserByName(ctx, user.Login)
 	if errors.Is(queryErr, pgx.ErrNoRows) {
 		s.writeResponse(w, r, http.StatusUnauthorized, errors.New("user is not registered"))
 		return
 	}
 	if s.Authorization.VerifyPassword(user.Password, usr.Password) {
-		s.writeToken(w, r, usr.Login)
+		s.writeToken(w, r, usr.Login, *usr.Id)
 	} else {
 		s.writeResponse(w, r, http.StatusUnauthorized, errors.New("wrong password"))
 	}
 }
 
 func (s *Controller) OrderList(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
+	if !s.Authorization.Authorize(w, r) {
+		s.writeResponse(w, r, http.StatusUnauthorized, nil)
+		return
+	}
+	token := r.Header.Get("Authorization")
+	token, tokenErr := security.GetToken(token)
+	if tokenErr != nil {
+		s.writeResponse(w, r, http.StatusInternalServerError, tokenErr)
+	}
+	ctx := context.Background()
+	userID := security.GetUserID(token)
+	orders, err := s.OrderService.GetUserOrders(ctx, userID)
+
+	if err != nil {
+		s.writeResponse(w, r, http.StatusInternalServerError, err)
+	} else if len(orders) == 0 {
+		s.writeResponse(w, r, http.StatusNoContent, orders)
+	} else {
+		s.writeResponse(w, r, http.StatusOK, orders)
+	}
 }
 
 func (s *Controller) UploadOrder(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
+	if !s.Authorization.Authorize(w, r) {
+		s.writeResponse(w, r, http.StatusUnauthorized, nil)
+		return
+	}
+	ctx := context.Background()
+	b, bodyErr := io.ReadAll(r.Body)
+	defer r.Body.Close()
+	if bodyErr != nil {
+		s.writeResponse(w, r, http.StatusBadRequest, bodyErr)
+	}
+	orderNum := string(b)
+	token := r.Header.Get("Authorization")
+	token, tokenErr := security.GetToken(token)
+	if tokenErr != nil {
+		s.writeResponse(w, r, http.StatusInternalServerError, tokenErr)
+	}
+	userID := security.GetUserID(token)
+	ordErr := s.OrderService.CreateOrder(ctx, orderNum, userID)
+	if errors.Is(ordErr, utils.ErrInvalidOrderNum) {
+		s.writeResponse(w, r, http.StatusUnprocessableEntity, tokenErr)
+	} else if errors.Is(ordErr, utils.ErrOrderNumAttachedToAnotherUser) {
+		s.writeResponse(w, r, http.StatusConflict, tokenErr)
+	} else if errors.Is(ordErr, utils.ErrOrderNumIsAlreadyRegistered) {
+		s.writeResponse(w, r, http.StatusOK, tokenErr)
+	}
+	if ordErr == nil {
+		s.writeResponse(w, r, http.StatusAccepted, nil)
+	} else {
+		s.writeResponse(w, r, http.StatusInternalServerError, ordErr)
+	}
 }
 func (s *Controller) CreateUser(w http.ResponseWriter, r *http.Request) {
 	var user api.User
 	body, _ := io.ReadAll(r.Body)
+	defer r.Body.Close()
 	if err := json.Unmarshal(body, &user); err != nil {
 		s.writeResponse(w, r, http.StatusBadRequest, err)
 	}
-	usr, queryErr := s.UserService.GetUserByName(user.Login)
+	ctx := context.Background()
+	usr, queryErr := s.UserService.GetUserByName(ctx, user.Login)
 	if errors.Is(queryErr, pgx.ErrNoRows) {
-		err := s.UserService.CreateUser(user)
+		err := s.UserService.CreateUser(ctx, user)
 		if err != nil {
 			s.writeResponse(w, r, http.StatusInternalServerError, err)
 		} else {
-			s.writeToken(w, r, usr.Login)
+			s.writeToken(w, r, usr.Login, *usr.Id)
 		}
-	} else {
+	}
+	if queryErr != nil {
 		s.writeResponse(w, r, http.StatusInternalServerError, queryErr)
 	}
-	if usr.Login != "" {
+	if user.Login == usr.Login {
 		s.writeResponse(w, r, http.StatusConflict, errors.New("user already exists"))
 	}
 }
 
-func (s *Controller) writeToken(w http.ResponseWriter, r *http.Request, userName string) {
-	token, err := s.Authorization.BuildJWTString(userName)
+func (s *Controller) WithdrawalsList(w http.ResponseWriter, r *http.Request) {
+	if !s.Authorization.Authorize(w, r) {
+		s.writeResponse(w, r, http.StatusUnauthorized, nil)
+		return
+	}
+	ctx := context.Background()
+	token := r.Header.Get("Authorization")
+	token, tokenErr := security.GetToken(token)
+	if tokenErr != nil {
+		s.writeResponse(w, r, http.StatusInternalServerError, tokenErr)
+	}
+	userID := security.GetUserID(token)
+	withdrawals, err := s.BalanceService.GetAllWithdraws(ctx, userID)
+	if err != nil {
+		s.writeResponse(w, r, http.StatusInternalServerError, err)
+	}
+	if len(withdrawals) == 0 {
+		s.writeResponse(w, r, http.StatusNoContent, nil)
+	} else {
+		s.writeResponse(w, r, http.StatusOK, withdrawals)
+	}
+}
+
+func (s *Controller) writeToken(w http.ResponseWriter, r *http.Request, userName string, userID int) {
+	token, err := s.Authorization.BuildJWTString(userName, userID)
 	if err != nil {
 		s.writeResponse(w, r, http.StatusInternalServerError, err)
 		return
@@ -98,6 +228,7 @@ func (s *Controller) writeToken(w http.ResponseWriter, r *http.Request, userName
 	s.writeResponse(w, r, http.StatusOK, err)
 }
 func (s *Controller) writeResponse(w http.ResponseWriter, _ *http.Request, code int, response interface{}) {
+	w.Header().Set("Content-Type", "application/json")
 	if response == nil {
 		w.WriteHeader(code)
 		return
